# TP3_grafos

./: README.md
Graph_Adjacence_List/: CMakeLists.txt  GUIA_EXECUCAO.md  Makefile  Makefile_fixed  Makefile_ift  test_ift.bat
Graph_Adjacence_List/include/: bucket_queue.h  edge.h  graph.h  ift_algorithm.h  ift_optimized_algorithm.h  ift_result.h  image.h  path_cost_function.h  pixel.h  seed_set.h  undirected_Graph.h
Graph_Adjacence_List/include/utils/: colorSegments.h  imageToGraph.h  opencv_ift_bridge.h  segmentation.h  union_find.h  utils.h
Graph_Adjacence_List/src/: Edge.cpp  Graph.cpp  Main.cpp  UndirectedGraph.cpp  Vertex.cpp  ift_algorithm.cpp  ift_image_processor.cpp  ift_image_processor_minimal.cpp  image.cpp  seed_set.cpp
Graph_Adjacence_List/src/graph/: directed_graph.cpp
Graph_Adjacence_List/src/ift/: ift_result.cpp
Graph_Adjacence_List/src/ift/algorithms/: ift_algorithm.cpp  ift_optimized_algorithm.cpp  path_cost_function.cpp
Graph_Adjacence_List/src/ift/data_structures/: bucket_queue.cpp  pixel.cpp
Graph_Adjacence_List/src/utils/: colorSegments.cpp  imageToGraph.cpp  opencv_ift_bridge.cpp  segmentation.cpp  union_find.cpp  utils.cpp
Graph_Adjacence_List/tests/: test_cost_functions.cpp  test_directed_graph.cpp  test_graph.cpp  test_ift_algorithm.cpp  test_optimized_basic.cpp  test_optimized_ift.cpp  test_seed_system.cpp  test_undirected_graph.cpp
